# ansible_course

./: 01232025.txt  01262025.txt  01272025.txt  01282025.txt  01292025.txt  ansible.yml  debug.yml  pyproject.toml
