[tool.poetry]
name = "ansible-course"
version = "0.1.0"
description = "All learnings from Ansible course"
authors = ["Bushan bengaluru"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
anisble = "^0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
